kube-OdooDeployment_OdooServiceCusterIP_OdooIngress_Pvc_OdooConfigMap-Tomcat_SideCar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: grupo-salmon
spec:
  selector:
    matchLabels:
      app: odoo
  replicas: 1 
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      # ODOO
      - name: odoo
        image: zettox/gsalmon:12.0
        resources:
          requests:
            memory: "12Gi"
            cpu: "1000m"
          limits:
            memory: "50Gi"
            cpu: "30000m"
        volumeMounts:
        - mountPath: "/mnt/extra-addons/datadir"
          name: odoo-data
        - name: git-source
          mountPath: "/mnt/extra-addons"
        - mountPath: /etc/odoo # mount odoo-conf volumn to /mnt/extra-addons
          name: odoo-conf
        ports:
          - name: http
            containerPort: 8069
          - name: longpooling
            containerPort: 8072
        securityContext:
          privileged: true
        livenessProbe:
          httpGet:
            path: /web
            port: http
          initialDelaySeconds: 600
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /web
            port: http
          initialDelaySeconds: 50
          periodSeconds: 50
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 6
      # Tomcat Sidecar
      - name: tomcat
        image: zettox/tomcat9:03102020
        # resources:
        #   requests:
        #     memory: "16Mi"
        #     cpu: "1000m"
        #   limits:
        #     memory: "16Mi"
        #     cpu: "1000m"
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # livenessProbe:
        #   tcpSocket:
        #     port: 8080
        #   initialDelaySeconds: 15
        #   periodSeconds: 20
        ports:
        - containerPort: 8080
      volumes:
        - name: odoo-conf
          configMap:
            name: odoo-conf # place ConfigMap `odoo-conf` on /opt/odoo
            items:
              - key: odoo.conf
                path: odoo.conf
        - name: odoo-data
          persistentVolumeClaim:
            claimName: odoo-data
        - name: git-source
          emptyDir: {}
        # - name: git-secret
        #   secret:
        #     defaultMode: 256
        #     secretName: git-creds # your-ssh-key

---
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: grupo-salmon
spec:
  selector:
    app: odoo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
      name: http
    - protocol: TCP
      port: 8072
      targetPort: 8072
      name: longpooling

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  namespace: grupo-salmon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "odoo"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "172800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "172800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "172800"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-buffers-number: "32 1024k"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "2048k"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.org/server-snippets: |
      proxy_set_header X-Forwarded-Host $host;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_redirect off;
    nginx.org/server-snippets: |
      location /web/static/ {
        proxy_cache_valid 200 60m;
        proxy_buffering on;
        expires 864000;
        proxy_pass http://odoo;
      }
    nginx.org/server-snippets: |
      gzip_types text/css text/scss text/plain text/xml application/xml application/json application/javascript;
      gzip on;
spec:
  rules:
  #- host: ercules.mx
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odoo
            port:
              number: 8069
      - path: /longpolling
        pathType: Prefix
        backend:
          service:
            name: odoo
            port:
              number: 8072
